fix alignment of add to order chosen box

--- a/app/assets/stylesheets/app/order_management.scss
+++ b/app/assets/stylesheets/app/order_management.scss
@@ -29,7 +29,7 @@
   width: 3em;
 }
 #product_add_chzn {
-  top: -3px;
+  top: 6px;
 }
 
 /* Generic Form Overrides */
